venera/ohos_plugins/zip_flutter/lib/src/generated_bindings.dart


  /// Deletes zip archive entries.
  ///
  /// @param zip zip archive handler.
  /// @param entries array of zip archive entries to be deleted.
  /// @param len the number of entries to be deleted.
  /// @return the number of deleted entries, or negative number (< 0) on error.
  int zip_entries_delete(
    ffi.Pointer<zip_t> zip,
    ffi.Pointer<ffi.Pointer<ffi.Char>> entries,
    int len,
  ) {
    return _zip_entries_delete(
      zip,
      entries,
      len,
    );
  }

  late final _zip_entries_deletePtr = _lookup<
      ffi.NativeFunction<
          ssize_t Function(
              ffi.Pointer<zip_t>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Size)>>('zip_entries_delete');
  late final _zip_entries_delete = _zip_entries_deletePtr.asFunction<
      int Function(
          ffi.Pointer<zip_t>, ffi.Pointer<ffi.Pointer<ffi.Char>>, int)>();

  /// Deletes zip archive entries.
  ///
  /// @param zip zip archive handler.
  /// @param entries array of zip archive entries indices to be deleted.
  /// @param len the number of entries to be deleted.
  /// @return the number of deleted entries, or negative number (< 0) on error.
  int zip_entries_deletebyindex(
    ffi.Pointer<zip_t> zip,
    ffi.Pointer<ffi.Size> entries,
    int len,
  ) {
    return _zip_entries_deletebyindex(
      zip,
      entries,
      len,
    );
  }

  late final _zip_entries_deletebyindexPtr = _lookup<
      ffi.NativeFunction<
          ssize_t Function(ffi.Pointer<zip_t>, ffi.Pointer<ffi.Size>,
              ffi.Size)>>('zip_entries_deletebyindex');
  late final _zip_entries_deletebyindex =
      _zip_entries_deletebyindexPtr.asFunction<
          int Function(ffi.Pointer<zip_t>, ffi.Pointer<ffi.Size>, int)>();

  /// Extracts a zip archive stream into directory.
  ///
  /// If on_extract is not NULL, the callback will be called after
  /// successfully extracted each zip entry.
  /// Returning a negative value from the callback will cause abort and return an
  /// error. The last argument (void *arg) is optional, which you can use to pass
  /// data to the on_extract callback.
  ///
  /// @param stream zip archive stream.
  /// @param size stream size.
  /// @param dir output directory.
  /// @param on_extract on extract callback.
  /// @param arg opaque pointer.
  ///
  /// @return the return code - 0 on success, negative number (< 0) on error.
  int zip_stream_extract(
    ffi.Pointer<ffi.Char> stream,
    int size,
    ffi.Pointer<ffi.Char> dir,
    ffi.Pointer<
            ffi.NativeFunction<
                ffi.Int Function(
                    ffi.Pointer<ffi.Char> filename, ffi.Pointer<ffi.Void> arg)>>
        on_extract,
    ffi.Pointer<ffi.Void> arg,
  ) {
    return _zip_stream_extract(
      stream,
      size,
      dir,
      on_extract,
      arg,
    );
  }

  late final _zip_stream_extractPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Size,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Int Function(ffi.Pointer<ffi.Char> filename,
                          ffi.Pointer<ffi.Void> arg)>>,
              ffi.Pointer<ffi.Void>)>>('zip_stream_extract');
  late final _zip_stream_extract = _zip_stream_extractPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<
              ffi.NativeFunction<
                  ffi.Int Function(ffi.Pointer<ffi.Char> filename,
                      ffi.Pointer<ffi.Void> arg)>>,
          ffi.Pointer<ffi.Void>)>();

  /// Opens zip archive stream into memory.
  ///
  /// @param stream zip archive stream.
  /// @param size stream size.
  /// @param level compression level (0-9 are the standard zlib-style levels).
  /// @param mode file access mode.
  /// - 'r': opens a file for reading/extracting (the file must exists).
  /// - 'w': creates an empty file for writing.
  /// - 'a': appends to an existing archive.
  ///
  /// @return the zip archive handler or NULL on error
  ffi.Pointer<zip_t> zip_stream_open(
    ffi.Pointer<ffi.Char> stream,
    int size,
    int level,
    int mode,
  ) {
    return _zip_stream_open(
      stream,
      size,
      level,
      mode,
    );
  }

  late final _zip_stream_openPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<zip_t> Function(ffi.Pointer<ffi.Char>, ffi.Size, ffi.Int,
              ffi.Char)>>('zip_stream_open');
  late final _zip_stream_open = _zip_stream_openPtr.asFunction<
      ffi.Pointer<zip_t> Function(ffi.Pointer<ffi.Char>, int, int, int)>();

  /// Opens zip archive stream into memory.
  /// The function additionally returns @param errnum -
  ///
  /// @param stream zip archive stream.
  /// @param size stream size.*
  /// @param level compression level (0-9 are the standard zlib-style levels).
  /// @param mode file access mode.
  /// - 'r': opens a file for reading/extracting (the file must exists).
  /// - 'w': creates an empty file for writing.
  /// - 'a': appends to an existing archive.
  /// @param errnum 0 on success, negative number (< 0) on error.
  ///
  /// @return the zip archive handler or NULL on error
  ffi.Pointer<zip_t> zip_stream_openwitherror(
    ffi.Pointer<ffi.Char> stream,
    int size,
    int level,
    int mode,
    ffi.Pointer<ffi.Int> errnum,
  ) {
    return _zip_stream_openwitherror(
      stream,
      size,
      level,
      mode,
      errnum,
    );
  }

  late final _zip_stream_openwitherrorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<zip_t> Function(ffi.Pointer<ffi.Char>, ffi.Size, ffi.Int,
              ffi.Char, ffi.Pointer<ffi.Int>)>>('zip_stream_openwitherror');
  late final _zip_stream_openwitherror =
      _zip_stream_openwitherrorPtr.asFunction<
          ffi.Pointer<zip_t> Function(
              ffi.Pointer<ffi.Char>, int, int, int, ffi.Pointer<ffi.Int>)>();

  /// Copy zip archive stream output buffer.
  ///
  /// @param zip zip archive handler.
  /// @param buf output buffer. User should free buf.
  /// @param bufsize output buffer size (in bytes).
  ///
  /// @return copy size
  int zip_stream_copy(
    ffi.Pointer<zip_t> zip,
    ffi.Pointer<ffi.Pointer<ffi.Void>> buf,
    ffi.Pointer<ffi.Size> bufsize,
  ) {
    return _zip_stream_copy(
      zip,
      buf,
      bufsize,
    );
  }

  late final _zip_stream_copyPtr = _lookup<
      ffi.NativeFunction<
          ssize_t Function(
              ffi.Pointer<zip_t>,
              ffi.Pointer<ffi.Pointer<ffi.Void>>,
              ffi.Pointer<ffi.Size>)>>('zip_stream_copy');
  late final _zip_stream_copy = _zip_stream_copyPtr.asFunction<
      int Function(ffi.Pointer<zip_t>, ffi.Pointer<ffi.Pointer<ffi.Void>>,
          ffi.Pointer<ffi.Size>)>();

  /// Close zip archive releases resources.
  ///
  /// @param zip zip archive handler.
  ///
  /// @return
  void zip_stream_close(
    ffi.Pointer<zip_t> zip,
  ) {
    return _zip_stream_close(
      zip,
    );
  }

  late final _zip_stream_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<zip_t>)>>(
          'zip_stream_close');
  late final _zip_stream_close =
      _zip_stream_closePtr.asFunction<void Function(ffi.Pointer<zip_t>)>();

  /// Creates a new archive and puts files into a single zip archive.
  ///
  /// @param zipname zip archive file.
  /// @param filenames input files.
  /// @param len: number of input files.
  ///
  /// @return the return code - 0 on success, negative number (< 0) on error.
  int zip_create(
    ffi.Pointer<ffi.Char> zipname,
    ffi.Pointer<ffi.Pointer<ffi.Char>> filenames,
    int len,
  ) {
    return _zip_create(
      zipname,
      filenames,
      len,
    );
  }

  late final _zip_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Size)>>('zip_create');
  late final _zip_create = _zip_createPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>, int)>();

  /// Extracts a zip archive file into directory.
  ///
  /// If on_extract_entry is not NULL, the callback will be called after
  /// successfully extracted each zip entry.
  /// Returning a negative value from the callback will cause abort and return an
  /// error. The last argument (void *arg) is optional, which you can use to pass
  /// data to the on_extract_entry callback.
  ///
  /// @param zipname zip archive file.
  /// @param dir output directory.
  /// @param on_extract_entry on extract callback.
  /// @param arg opaque pointer.
  ///
  /// @return the return code - 0 on success, negative number (< 0) on error.
  int zip_extract(
    ffi.Pointer<ffi.Char> zipname,
    ffi.Pointer<ffi.Char> dir,
    ffi.Pointer<
            ffi.NativeFunction<
                ffi.Int Function(
                    ffi.Pointer<ffi.Char> filename, ffi.Pointer<ffi.Void> arg)>>
        on_extract_entry,
    ffi.Pointer<ffi.Void> arg,
  ) {
    return _zip_extract(
      zipname,
      dir,
      on_extract_entry,
      arg,
    );
  }

  late final _zip_extractPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Int Function(ffi.Pointer<ffi.Char> filename,
                          ffi.Pointer<ffi.Void> arg)>>,
              ffi.Pointer<ffi.Void>)>>('zip_extract');
  late final _zip_extract = _zip_extractPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<
              ffi.NativeFunction<
                  ffi.Int Function(ffi.Pointer<ffi.Char> filename,
                      ffi.Pointer<ffi.Void> arg)>>,
          ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.UnsignedChar> tdefl_compress_data(
    ffi.Pointer<ffi.Void> inBuf,
    int inSize,
    ffi.Pointer<ffi.Size> outSize,
    int flags,
  ) {
    return _tdefl_compress_data(
      inBuf,
      inSize,
      outSize,
      flags,
    );
  }

  late final _tdefl_compress_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.UnsignedChar> Function(
              ffi.Pointer<ffi.Void>,
              ffi.Size,
              ffi.Pointer<ffi.Size>,
              ffi.Int)>>('tdefl_compress_data');
  late final _tdefl_compress_data = _tdefl_compress_dataPtr.asFunction<
      ffi.Pointer<ffi.UnsignedChar> Function(
          ffi.Pointer<ffi.Void>, int, ffi.Pointer<ffi.Size>, int)>();

  void tdefl_free_data(
    ffi.Pointer<ffi.UnsignedChar> buf,
  ) {
    return _tdefl_free_data(
      buf,
    );
  }

  late final _tdefl_free_dataPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.UnsignedChar>)>>(
      'tdefl_free_data');
  late final _tdefl_free_data = _tdefl_free_dataPtr
      .asFunction<void Function(ffi.Pointer<ffi.UnsignedChar>)>();
}

typedef va_list = ffi.Pointer<ffi.Char>;

/// @struct zip_t
///
/// This data structure is used throughout the library to represent zip archive -
/// forward declaration.
final class zip_t extends ffi.Opaque {}

abstract class ZipWriteStatus {
  static const int ZIP_STATUS_NO_USE = 0;
  static const int ZIP_WRITE_STATUS_OK = 1;
  static const int ZIP_WRITE_STATUS_ERROR = 2;
  static const int ZIP_WRITE_STATUS_WRITING = 3;
}

typedef ssize_t = ffi.LongLong;
typedef ZipThreadWriteHandler = ffi.Int;
